--- a/client/src/core/oldCustomerPanel.dialog.html
+++ b/client/src/core/oldCustomerPanel.dialog.html
@@ -15,18 +15,40 @@
             <h3>
                 {{$ctrl.customer.firstname}} {{$ctrl.customer.lastname}} - {{$ctrl.customer.phone}}
             </h3>
-        </div>
-        <div class="" layout="row" flex="none" layout-align="center center">
-            <div>
-                {{$ctrl.newOrder.scheduleAt | date:'MM-dd-yyyy'}}
-            </div>
-        </div>
-        <div class="" layout="row" flex layout-align="center center">
-            <div class="" ng-repeat="item in $ctrl.selectItems">
-                <md-button ng-click="$ctrl.selectAndConfirm(item)" ng-show="item.show">
-                    {{item.label}}
+            <div class="">
+                <md-button ng-click="$ctrl.selectAndConfirm('info')">
+                    Info
                 </md-button>
             </div>
+        </div>
+        <md-divider></md-divider>
+        <div class="md-padding" layout="column" flex>
+            <div layout="row" ng-repeat="order in $ctrl.todayOrders | orderBy:'scheduleAt'" layout-align="start center">
+                <div class="" flex>
+                    {{order.scheduleAt | date:'MM-dd-yyyy @ h:mma'}}
+                </div>
+                <div class="">
+                    <md-button ng-click="$ctrl.selectAndConfirm('checkIn', order)">
+                        check in
+                    </md-button>
+                </div>
+            </div>
+            <div layout="row" ng-repeat="order in $ctrl.newOrders |  orderBy:'scheduleAt'" layout-align="start center">
+                <div class="" flex>
+                    {{order.scheduleAt | date:'MM-dd-yyyy @ h:mma'}}
+                </div>
+                <div class="">
+                    <md-button ng-click="$ctrl.selectAndConfirm('editOrder', order)">
+                        Edit
+                    </md-button>
+                </div>
+            </div>
+            <div layout="row" ng-show="$ctrl.newOrders.length===0 && $ctrl.todayOrders.length === 0">
+                <md-button ng-click="$ctrl.selectAndConfirm('newOrder')">
+                    New Order
+                </md-button>
+            </div>
+
         </div>
     </md-content>
 </div>
