change pic from orders to pets and fix pet form.

--- a/client/src/client/client.html
+++ b/client/src/client/client.html
@@ -5,12 +5,12 @@
     <p>
         <small> | powered by Beastie </small>
     </p>
-    <div class="">
+    <div class="" ng-click="$ctrl.$state.go('client.customersCheckIn')">
         <md-icon md-svg-src="beastie"></md-icon>
     </div>
     <div class="" flex></div>
     <div class="">
-        <md-icon md-svg-src="{{$ctrl.fullscreenIcon}}" ng-click="$ctrl.toggleFullscreen()"></md-icon>
+        <!-- <md-icon md-svg-src="{{$ctrl.fullscreenIcon}}" ng-click="$ctrl.toggleFullscreen()"></md-icon> -->
         <!-- <md-icon
             md-svg-src="logout-variant"
             ng-click="$ctrl.$state.go('client.customersCheckIn')">
