--- a/client/src/client/selfServiceForm/selfServiceForm.html
+++ b/client/src/client/selfServiceForm/selfServiceForm.html
@@ -83,7 +83,7 @@
                         $ctrl.selected['services'].length === 0 ||
                         $ctrl.data.balance != 0
                     "
-                    class="md-primary md-raised md-padding" ng-click="$ctrl.purchase('credits')">
+                    class="md-primary md-raised md-padding" ng-click="$ctrl.purchaseWithCredits()">
                     Pay with My Credits
                 </md-button>
                 <md-button
