--- a/client/src/core/core.html
+++ b/client/src/core/core.html
@@ -1,7 +1,8 @@
 <div layout="row" flex id="core" layout-fill>
     <div layout="column" layout-align="start center" class="sidenav" md-colors="{background:'primary-700'}">
         <md-icon ng-show="!toggleIcons" md-svg-src="calendar-plus" ng-click="$ctrl.startup()"></md-icon>
-        <md-icon ng-show="!toggleIcons" md-svg-src="book-open-page-variant" ng-click="$ctrl.go('core.orders.list')"></md-icon>
+        <md-icon ng-class="{'highlight-menu-item':$ctrl.hasNewCheckedIn}" ng-show="!toggleIcons" md-svg-src="book-open-page-variant" ng-click="$ctrl.hasNewCheckedIn=false; $ctrl.go('core.orders.list')"></md-icon>
+        <md-icon ng-class="{'highlight-menu-item':$ctrl.hasNewPurchase}" ng-show="!toggleIcons" md-svg-src="cash-usd" ng-click="$ctrl.hasNewPurchase=false; $ctrl.go('core.transactions.new')"></md-icon>
         <md-icon ng-show="!toggleIcons" md-svg-src="format-list-bulleted" ng-click="$ctrl.openInhouseOrdersDialog()"></md-icon>
         <!-- <div flex></div> -->
         <md-icon ng-show="toggleIcons" md-svg-src="account-multiple" ng-click="$ctrl.go('core.customers.list')"></md-icon>
