mainly on hooking up customer detail and ordersList, and photo related stuff

--- a/client/src/core/customers/customerDetailDialog.html
+++ b/client/src/core/customers/customerDetailDialog.html
@@ -1,6 +1,6 @@
-<div id="preview-large" class="hide">
-    <img src="{{$ctrl.previewLargeUrl}}" alt=""  ng-click="$ctrl.toggleLargePic()"/>
-</div>
+<!--<div id="preview-large" class="hide">-->
+<!--    <img src="{{$ctrl.previewLargeUrl}}" alt=""  ng-click="$ctrl.toggleLargePic()"/>-->
+<!--</div>-->
 <div layout="column" layout-align="start center" flex>
     <md-toolbar class="header md-primary md-padding" layout="row" layout-align="start center">
         <!-- <h5>Customer - Pet - Detail</h5> -->
@@ -12,16 +12,17 @@
     <md-content layout="column" flex layout-fill>
         <md-tabs md-border-bottom flex layout="column" md-center-tabs md-selected="$ctrl.selectedTab">
           <md-tab label="gallery">
-              <md-content layout="row" layout-align="start start" flex class="gallery">
-                  <md-content layout="column" ng-repeat="order in $ctrl.customer.orders" class="gallery-box">
-                      <md-subheader>
-                          {{order.scheduleAt | date:'yyyy-MM-dd'}}
-                      </md-subheader>
-                      <md-content layout="column" flex>
-                          <img ng-src="{{url}}" alt="loading..." ng-repeat="url in $ctrl.pictures[order._id]" ng-click="$ctrl.toggleLargePic(url)"/>
-                      </md-content>
-                  </md-content>
-              </md-content>
+              <pet-photo-gallery pet-id="$ctrl.customer.pets[0]._id" layout-margin></pet-photo-gallery>
+              <!--<md-content layout="row" layout-align="start start" flex class="gallery">-->
+              <!--    <md-content layout="column" ng-repeat="order in $ctrl.customer.orders" class="gallery-box">-->
+              <!--        <md-subheader>-->
+              <!--            {{order.scheduleAt | date:'yyyy-MM-dd'}}-->
+              <!--        </md-subheader>-->
+              <!--        <md-content layout="column" flex>-->
+              <!--            <img ng-src="{{url}}" alt="loading..." ng-repeat="url in $ctrl.pictures[order._id]" ng-click="$ctrl.toggleLargePic(url)"/>-->
+              <!--        </md-content>-->
+              <!--    </md-content>-->
+              <!--</md-content>-->
           </md-tab>
           <md-tab label="{{$ctrl.customer.firstname}}" flex layout="column">
             <md-content class="customer-form" flex layout="column">
@@ -89,7 +90,7 @@
               <md-content layout="column" flex class="md-padding">
                   <div layout="row" flex="none">
                       <div flex></div>
-                      <md-button ng-show="pet" ng-click="$ctrl.update(pet)" class="md-raised md-primary">Update Pet</md-button>
+                      <md-button ng-show="pet" ng-click="$ctrl.updatePet(pet)" class="md-raised md-primary">Update Pet</md-button>
                   </div>
                   <md-subheader class="md-no-sticky">
                       Information
