--- a/client/src/core/orders/ordersList/ordersList.html
+++ b/client/src/core/orders/ordersList/ordersList.html
@@ -74,10 +74,11 @@
                         {{order.checkInNumber}}</div>
                 </md-grid-tile>
                 <md-grid-tile  md-colspan="2" md-rowspan="1">
-                    <div layout="column" layout-align="center center" class="md-headline">
-                        <div style="text-transform:capitalize;">{{order.customers[0].firstname | lowercase}} {{order.customers[0].lastname | lowercase}}</div>
-                        <div>{{order.customers[0].phone | tel}}</div>
-                    </div>
+                    <md-button layout="column" layout-align="center center" layout-fill
+                        ng-click="$ctrl.customerDetail(order.customers[0]._id, order, 'customer')"> 
+                        <div class="md-headline" style="text-transform:capitalize;">{{order.customers[0].firstname | lowercase}} {{order.customers[0].lastname | lowercase}}</div>
+                        <div class="md-headline">{{order.customers[0].phone | tel}}</div>
+                    </md-button>
                 </md-grid-tile>
 
                 <md-grid-tile  md-colspan="3" md-rowspan="3" ng-if="!order.checkInAt" md-colors="{background: 'primary-500-0.85'}">
@@ -122,9 +123,19 @@
                         <span class="md-headline">
                         ${{$ctrl.getTotal(order)}}</span></md-button></md-grid-tile>
                 <md-grid-tile md-colspan="2" md-rowspan="2">
-                    <!-- <img ng-src="/images/pets/{{order.pet_id}}.png" alt="Washed Out" ng-click="$ctrl.showPreviousOrders(order)"> -->
-
-                    <div class="md-headline tile-pets-name">{{order.pets[0].name | uppercase}}</div></md-grid-tile>
+                    <md-button ng-click="$ctrl.customerDetail(order.customers[0]._id, order, 'gallery')" layout-fill>
+                        <div class="tile-pet-img" layout-fill
+                            ng-show="order.pictures.length"
+                            ng-style="{'background-image':'url('+order.pictures[order.pictures.length-1]+')'}">
+                        </div>
+                        <div layout-fill layout layout-align="center center"
+                            ng-hide="order.pictures.length">
+                            <md-icon class="s100" md-svg-src="dog-saint-bernard" aria-label="pet photo"
+                                style="padding-bottom: 20px;"></md-icon>
+                        </div>
+                        <div class="md-headline tile-pets-name">{{order.pets[0].name | uppercase}}</div>
+                    </md-button>
+                </md-grid-tile>
 
                 <!--<md-grid-tile  md-colspan="2" md-rowspan="2" ng-if="!order.checkInAt" md-colors="{background: 'primary-500-0.85'}">-->
                 <!--    <md-button layout-fill ng-disabled="order.checkInAt" ng-click="$ctrl.checkIn(order)"><span class="md-headline">-->
@@ -143,7 +154,7 @@
                     <md-button layout-fill ng-click="$ctrl.waivers(order)" ng-disabled="!order.services">
                         waivers</md-button></md-grid-tile>
                 <md-grid-tile  md-colspan="1" md-rowspan="1" ng-if="order.checkInAt && !order.checkOutAt">
-                    <md-button layout-fill ng-disabled="!order.checkInAt" ng-click="$ctrl.takeSnapshot(order.pets[0]._id)">
+                    <md-button layout-fill ng-disabled="!order.checkInAt" ng-click="$ctrl.takeSnapshot(order.pets[0]._id, order)">
                         <md-icon class="s48" md-svg-src="camera" aria-label="take photos"></md-icon></md-button></md-grid-tile>
                 <!--<md-grid-tile  md-colors="{background: 'accent-500-0.85'}">-->
 
